# folio

./: .dockerignore  .gitignore  CONTRIBUTE.md  Cargo.toml  Dockerfile  Dockerfile.sync-dispatcher  Dockerfile.sync-worker  README.md
.github/workflows/: release-client.yml
client/: Cargo.toml
client/src/: auth.rs  launch_agent.rs  main.rs  mount.rs  proxy.rs  supervisor.rs  tray.rs
connectors/: Cargo.toml
connectors/examples/: sync_github.rs
connectors/src/: connector.rs  fs.rs  lib.rs  model.rs  render.rs
connectors/src/github/: connector.rs  mod.rs
connectors/src/github/templates/: index.md.j2  issue.md.j2  repository.md.j2
connectors/src/linear/: connector.rs  mod.rs
connectors/src/linear/templates/: index.md.j2  issue.md.j2
connectors/src/slack/: connector.rs  mod.rs
connectors/src/slack/templates/: channel.md.j2  index.md.j2
dav-server/: Cargo.toml
dav-server/src/: auth.rs  main.rs
docs/: sync-contract.md
infra/aws/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: deploy-backend.sh
sync-dispatcher/: Cargo.toml
sync-dispatcher/src/: main.rs
sync-worker/: Cargo.toml
sync-worker/src/: main.rs  token_cache.rs  tokens.rs
www.foliofs.dev/: package.json  skills-lock.json
www.foliofs.dev/public/: install.sh  uninstall.sh
www.foliofs.dev/public/branding/: README.md
www.foliofs.dev/src/: proxy.ts
www.foliofs.dev/src/app/: app.css  globals.css  layout.tsx  page.tsx
www.foliofs.dev/src/app/_components/: clerk-appearance.ts  copy-button.tsx  folio-browser.tsx  site-chrome.tsx
www.foliofs.dev/src/app/_components/connections-dashboard/: index.tsx
www.foliofs.dev/src/app/_landing/: connector-tree.tsx  landing.css  landing.tsx  path-badge.tsx
www.foliofs.dev/src/app/api/connections/[provider]/[[...action]]/: route.ts
www.foliofs.dev/src/app/api/connections/github/[connectionId]/disconnect/: route.ts
www.foliofs.dev/src/app/api/connections/github/callback/: route.ts
www.foliofs.dev/src/app/api/connections/github/start/: route.ts
www.foliofs.dev/src/app/api/connections/linear/[connectionId]/disconnect/: route.ts
www.foliofs.dev/src/app/api/connections/linear/callback/: route.ts
www.foliofs.dev/src/app/api/connections/linear/start/: route.ts
www.foliofs.dev/src/app/api/connections/slack/[connectionId]/disconnect/: route.ts
www.foliofs.dev/src/app/api/connections/slack/callback/: route.ts
www.foliofs.dev/src/app/api/connections/slack/start/: route.ts
www.foliofs.dev/src/app/api/folio/file/: route.ts
www.foliofs.dev/src/app/app/: page.tsx
www.foliofs.dev/src/app/app/connections/: page.tsx
www.foliofs.dev/src/app/connections/: page.tsx
www.foliofs.dev/src/app/sign-in/[[...sign-in]]/: page.tsx
www.foliofs.dev/src/app/sign-up/[[...sign-up]]/: page.tsx
www.foliofs.dev/src/lib/: aws.ts  folio-dav.ts
www.foliofs.dev/src/lib/connections/: github.ts  linear.ts  model.ts  oauth.ts  registry.ts  secrets.ts  slack.ts  store.ts  sync.ts  tokens.ts
www.foliofs.dev/src/lib/connections/providers/: github.ts  linear.ts  slack.ts
