[package]
name = "foliofs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "folio"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tao = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }
url = { workspace = true }

[features]
default = []
tray = ["dep:tao", "dep:tray-icon"]
