[package]
name = "foliofs-dav-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "foliofs-dav-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dav-server = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
jsonwebtoken = { workspace = true }
