[package]
name = "foliofs-sync-dispatcher"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "foliofs-sync-dispatcher"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
chrono = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_dynamo = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

foliofs-connectors = { path = "../connectors" }
