[package]
name = "foliofs-sync-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "foliofs-sync-worker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-kms = { workspace = true }
base64 = { workspace = true }
aws_lambda_events = { workspace = true }
chrono = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_dynamo = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

foliofs-connectors = { path = "../connectors" }
